# psych-research-data-toolkit

./: .gitignore  CHANGELOG.md  ISSUES.md  KEY_HANDLING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  project_task.md
.github/workflows/: ci.yml  release.yml
configs/: anxiety.toml  dataset_a.toml
data/dataset_a/: README.md
data/examples/: dataset_a_demo.csv  dataset_a_sample.csv  surveys.csv
docs/: README.md  clinician_quickstart.md  concepts.md  dataset_a.md  dataset_a_live_run.md  quickstart.md  walkthrough.md
docs/assets/dataset-a-demo/: README.md  descriptives.json  generate_demo_outputs.py
docs/assets/dataset-a-osf/: README.md
docs/assets/dataset-a-osf/bundle/: OSF_README.md  alerts.json  data_dictionary.csv  interim_clean.csv  report.json
docs/assets/dataset-a-osf/provenance/: run_manifest_20251115T021307Z.json
docs/prompts/: 00_repo-coach.md  01_summarize-repo.md  02_refactor-safely.md
prompts/: codex-guidance.md
scripts/: run_dataset_a.sh  run_dataset_a_osf_demo.sh
src/prdt/: anonymize.py  cleaning.py  cli.py  phi.py  plots.py  scales.py  schema.py  stats.py
tests/: test_cli.py  test_phi.py
