[project]
name = "prdt"
version = "0.1.0"
description = "Psych Research Data Toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas>=2.2","numpy>=1.26","matplotlib>=3.8"]

[project.scripts]
prdt = "prdt.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
