[project]
name = "prdt"
version = "0.1.3"
description = "Psych Research Data Toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas>=2.2","numpy>=1.26","matplotlib>=3.8","tomli; python_version < \"3.11\""]

[project.optional-dependencies]
dev = ["pytest>=8.4","build>=1.2"]

[project.scripts]
prdt = "prdt.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
